<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Header -->
    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:layout_marginTop="-125dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Footer -->
    <ImageView
        android:id="@+id/imageViewFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:layout_marginBottom="-125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Body Layout -->
    <LinearLayout
        android:id="@+id/mainContentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageViewHeader"
        app:layout_constraintBottom_toTopOf="@id/imageViewFooter"
        >

        <!-- TextViews -->
        <TextView
            android:id="@+id/textViewMagneticField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magnetic_field"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textViewMagneticFieldX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/magnetic_field_x"
            />

        <TextView
            android:id="@+id/textViewMagneticFieldY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magnetic_field_y"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textViewMagneticFieldZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magnetic_field_z"
            android:textAlignment="center"
            />

        <!-- Buttons -->
        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_magnetic_sensor"
            android:layout_marginStart="120dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/textViewAccelerationMagnitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_magnitude"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textViewAccelerationX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/acceleration_x"
            />

        <TextView
            android:id="@+id/textViewAccelerationY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_y"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textViewAccelerationZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_z"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/buttonStartAccelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_accelerometer"
            android:layout_marginStart="120dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
